Bug 71980 - [BYT Bisected]System booting up with call trace in dmesg
Summary: [BYT Bisected]System booting up with call trace in dmesg
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-25 09:21 UTC by Guo Jinxian
Modified: 2017-10-06 14:41 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Call trace dmesg (92.74 KB, text/plain)
2013-11-25 09:21 UTC, Guo Jinxian
no flags Details
dmesg (60.02 KB, text/plain)
2013-11-29 08:11 UTC, Guo Jinxian
no flags Details
fix pm init ordering (4.16 KB, patch)
2013-11-29 08:32 UTC, Daniel Vetter
no flags Details | Splinter Review

Description Guo Jinxian 2013-11-25 09:21:04 UTC
Created attachment 89734 [details]
Call trace dmesg

Environment:
--------------------------
Kernel: (drm-intel-fixes)2daabd7848b89afddd93be616f1be5639ea78822
Some additional commit info:
Author: Lars-Peter Clausen <lars@metafoo.de>
Date:   Fri Aug 30 17:39:33 2013 +0200

    ASoC: dapm: Fix auto-disable for inverted controls

    We need to make sure that the control's cached value is initialized to the same
    value as the control's widget->on_val. Otherwise updates might be lost.

Reproduce step:
---------------------
1. system boot up
2. dmesg | grep -i "call trace"

Call Trace:
---------------------
[    1.954059] [drm:intel_detect_pch], No PCH found?
[    1.954342] INFO: trying to register non-static key.
[    1.954354] the code is fine but needs lockdep annotation.
[    1.954362] turning off the locking correctness validator.
[    1.954373] CPU: 0 PID: 1204 Comm: systemd-udevd Not tainted 3.11.0-rc5_drm-intel-fixes_2daabd_20131125+ #1
[    1.954383] Hardware name: Intel Corp. VALLEYVIEW B3 PLATFORM/NOTEBOOK, BIOS BBAYCRB1.X64.0068.R30.1311051945 BBAY_X64_R_V68_30 11/05/2013
[    1.954396]  0000000000000002 ffff880079a837d8 ffffffff817b78cb 0000000000000000
[    1.954412]  ffff880079a838a0 ffffffff81088118 ffff880079b20000 ffffffff8104eddd
[    1.954426]  0000000ffffffff1 0000000079ba2000 ffffffff00000000 ffff880000000000
[    1.954440] Call Trace:
[    1.954452]  [<ffffffff817b78cb>] dump_stack+0x45/0x56
[    1.954465]  [<ffffffff81088118>] __lock_acquire+0x736/0x1825
[    1.954476]  [<ffffffff8104eddd>] ? __flush_work+0x3a/0x1d3
[    1.954488]  [<ffffffff8108778f>] ? trace_hardirqs_on_caller+0x16e/0x18a
[    1.954500]  [<ffffffff810877b8>] ? trace_hardirqs_on+0xd/0xf
[    1.954510]  [<ffffffff8104eddd>] ? __flush_work+0x3a/0x1d3
[    1.954521]  [<ffffffff81089888>] lock_acquire+0x99/0x107
[    1.954531]  [<ffffffff8104ef7b>] ? flush_work+0x5/0x57
[    1.954541]  [<ffffffff81087604>] ? mark_held_locks+0xd1/0xee
[    1.954551]  [<ffffffff8104efaa>] flush_work+0x34/0x57
[    1.954561]  [<ffffffff8104ef7b>] ? flush_work+0x5/0x57
[    1.954572]  [<ffffffff8104fea6>] __cancel_work_timer+0xaf/0xf3
[    1.954582]  [<ffffffff8104ff0f>] cancel_delayed_work_sync+0x13/0x15
[    1.954633]  [<ffffffffa00b2cfe>] intel_disable_gt_powersave+0x26c/0x3c4 [i915]
[    1.954678]  [<ffffffffa00b4446>] intel_gt_sanitize+0x91/0x93 [i915]
[    1.954713]  [<ffffffffa0072049>] i915_driver_load+0x753/0xd2d [i915]
[    1.954741]  [<ffffffffa0016998>] ? drm_get_minor+0x1d4/0x22e [drm]
[    1.954765]  [<ffffffffa00185d5>] drm_get_pci_dev+0x169/0x269 [drm]
[    1.954800]  [<ffffffffa006e6b2>] i915_pci_probe+0x53/0x5d [i915]
[    1.954812]  [<ffffffff8136a6df>] local_pci_probe+0x1f/0x30
[    1.954822]  [<ffffffff8136afcf>] pci_device_probe+0xbf/0xe5
[    1.954835]  [<ffffffff813f69c5>] driver_probe_device+0x95/0x1a0
[    1.954846]  [<ffffffff813f6b6e>] __driver_attach+0x61/0x83
[    1.954856]  [<ffffffff813f6b0d>] ? __device_attach+0x3d/0x3d
[    1.954867]  [<ffffffff813f4f5d>] bus_for_each_dev+0x80/0x8a
[    1.954877]  [<ffffffff813f6549>] driver_attach+0x1e/0x20
[    1.954888]  [<ffffffff813f6163>] bus_add_driver+0x10e/0x216
[    1.954899]  [<ffffffff813f7059>] driver_register+0x8f/0x100
[    1.954909]  [<ffffffff8136adc1>] __pci_register_driver+0x60/0x63
[    1.954920]  [<ffffffffa00fd000>] ? 0xffffffffa00fcfff
[    1.954942]  [<ffffffffa0018760>] drm_pci_init+0x8b/0xef [drm]
[    1.954952]  [<ffffffffa00fd000>] ? 0xffffffffa00fcfff
[    1.954988]  [<ffffffffa00fd066>] i915_init+0x66/0x68 [i915]
[    1.955000]  [<ffffffff81000271>] do_one_initcall+0x84/0x10f
[    1.955011]  [<ffffffff8105930e>] ? up_read+0x1f/0x35
[    1.955021]  [<ffffffff8105a46b>] ? __blocking_notifier_call_chain+0x51/0x5f
[    1.955034]  [<ffffffff81092d6a>] load_module+0x15ff/0x1c53
[    1.955044]  [<ffffffff810904f0>] ? store_uevent+0x3a/0x3a
[    1.955056]  [<ffffffff8111d350>] ? vfs_read+0xfd/0x14b
[    1.955067]  [<ffffffff81090800>] ? copy_module_from_fd+0xd0/0xe8
[    1.955078]  [<ffffffff810934c9>] SyS_finit_module+0x57/0x6d
[    1.955091]  [<ffffffff817c5ec2>] system_call_fastpath+0x16/0x1b
[    1.964401] [drm:intel_opregion_setup], graphic opregion physical addr: 0x79568018
Comment 1 Daniel Vetter 2013-11-25 09:26:33 UTC
Is this a regression? If so, can you please try to bisect it?

Do you see this on any other platforms, specifically other gen7 machines like ivb/hsw?
Comment 2 Guo Jinxian 2013-11-25 09:35:23 UTC
(In reply to comment #1)
> Is this a regression? If so, can you please try to bisect it?
> 
> Do you see this on any other platforms, specifically other gen7 machines
> like ivb/hsw?

Yes, it a regression bug. 

We found this bug on -testing(f400ddc64ab74ae754896138f1aacd4b4ad62def), We don't meet this bug on other machines.

We had bisect it, this commit(2daabd7848b89afddd93be616f1be5639ea78822) is the first bad point.
Comment 3 Daniel Vetter 2013-11-25 09:40:17 UTC
Oh, I din't see that the mention commit is the bisected regression point. Please make this clearer next time around when writing your initial report.

The bisect commit is rather strange since it changes code that shouldn't run on our platform at all (and even less should be able to affect i915). Have you checked the bisect by reverting the offending commit?

If that doesn't confirm the bisect please double-check that it's done correct.
Comment 4 Guo Jinxian 2013-11-29 01:33:36 UTC
(In reply to comment #3)
> Oh, I din't see that the mention commit is the bisected regression point.
> Please make this clearer next time around when writing your initial report.
> 
> The bisect commit is rather strange since it changes code that shouldn't run
> on our platform at all (and even less should be able to affect i915). Have
> you checked the bisect by reverting the offending commit?
> 
> If that doesn't confirm the bisect please double-check that it's done
> correct.

Revert the commit 2daabd7848b89afddd93be616f1be5639ea78822 base on commit fec8cba306f974f3a4491176994de5d821273643, this bug unable to reproduce. thanks.
Comment 5 Daniel Vetter 2013-11-29 07:22:01 UTC
I'm totally baffled. Can you please attach the dmesg with the calltrace you get when booting into the first bad commit, i.e. 2daabd7848b89afddd93be616f1be5639ea78822
Comment 6 Guo Jinxian 2013-11-29 08:11:13 UTC
Created attachment 89982 [details]
dmesg
Comment 7 Guo Jinxian 2013-11-29 08:12:45 UTC
(In reply to comment #5)
> I'm totally baffled. Can you please attach the dmesg with the calltrace you
> get when booting into the first bad commit, i.e.
> 2daabd7848b89afddd93be616f1be5639ea78822

Uploaded dmesg in attachment, thanks.
Comment 8 Daniel Vetter 2013-11-29 08:32:27 UTC
Created attachment 89983 [details] [review]
fix pm init ordering

Please test the attached patch.
Comment 9 Guo Jinxian 2013-12-06 05:31:01 UTC
(In reply to comment #8)
> Created attachment 89983 [details] [review] [review]
> fix pm init ordering
> 
> Please test the attached patch.

The bug unable to reproduce on commit 0d1430a3f4b7cfd8779b78740a4182321f3ca7f3 with the attached patch. Thanks.
Comment 10 Damien Lespiau 2013-12-16 11:43:48 UTC
The patch has been merged and Guo confirmed that he couldn't see the warning anymore with it. Closing.
Comment 11 Guo Jinxian 2013-12-18 01:53:14 UTC
Checked on latest -nightly(f0404eaa3ab8607058a3581e0d691d35ca4b79bd), this bug had fixed, thanks.
Comment 12 Elizabeth 2017-10-06 14:41:55 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.